ags (0.7.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove of effects because refactoring broke it
	* fixed remove of automation as removing effect because before it was left there
	* implemented update automation editor on add/remove effect

ags (0.7.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed infinite loop in ags_automation_editor.c - line = line++
	* fixed restore of controls
	* fixed AgsNavigation set bpm
	* fixed missing length of AgsDrum and AgsMatrix
	* optimized XML file output

ags (0.7.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash in ags_recycling_create_audio_signal_with_frame_count() because premature end wasn't handled
	* fixed dead-lock caused by AgsNavigation callbacks
	* fixed missing AgsThreadPool for AgsLv2WorkerManager in ags_setup()
	* fixed unlock libinstpatch mutices in ags_ipatch.c because else ending in dead-lock
	* fixed looped AgsRecallDssiRun and AgsRecallLv2Run
	* improved AgsLadspaBrowser and AgsLv2Browser to not load default directory every time

ags (0.7.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed clip-board by merging values since automation ports can occur multiple times
	* fixed map width of automation editor
	* fixed clipped selection
	* fixed reset automation editor position
	* fixed ruler widget because the previous code obviously did wrong use of ceil()
	* fixed translate values in automation editor
	* fixed line member editor hide bulk
	* fixed not available line member port it was broke because of refactoring
	* implemented Atk interfaces in ags_automation_edit.c
	* implemented selection of automation editor
	* implemented ags_soundcard_get_loop(), ags_soundcard_set_loop() and ags_soundcard_get_loop_offset()
	* improved loop mode
	* improved AgsPad mutices in ags_pad_init_channel_launch_callback()
	* improved remove line effect and effect line effect
	* improved remove effect bulk effect